--- a/floorp/browser/base/content/browser-verticaltabs.css
+++ b/floorp/browser/base/content/browser-verticaltabs.css
@@ -2,6 +2,10 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+   :root {
+    --tab-separator-opacity: 0 !important;
+  }
+
    .tabbrowser-tab {
      display: block !important;
      --tab-overflow-pinned-tabs-width: 0px !important;
@@ -50,7 +54,7 @@
      min-width: var(--hovering-verticaltab-width, 3em) !important;
    }
 
-   #tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs])>#tabbrowser-arrowscrollbox>.tabbrowser-tab[first-visible-unpinned-tab] {
+   #tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs]) > #tabbrowser-arrowscrollbox[flex] > .tabbrowser-tab[first-visible-unpinned-tab] {
      margin-inline-start: 0 !important
    }
 
@@ -250,4 +254,13 @@
 
   #tabs-newtab-button .toolbarbutton-icon[class] {
     padding: 0px !important;
+  }
+
+  .tab-close-button {
+    position: relative;
+    right: 10px;
+  }
+  
+  .tabbrowser-tab[first-visible-unpinned-tab="true"] .tab-close-button {
+    right: 11px;
   }
