--- a/floorp/browser/base/content/browser-floorp.css
+++ b/floorp/browser/base/content/browser-floorp.css
@@ -275,8 +275,9 @@
 }
 
 :root[invisibleBMS] #sidebar2-box{
-max-width: 0px !important;
-min-width: 0px !important;
+  max-width: 0px !important;
+  min-width: 0px !important;
+  border: unset !important;
 }
 
 #bsb-context-add, #bsb-context-link-add {
