Revert "prerelease Midori 11.2.1"
This reverts commit fcb5b463e1dc8f4fda8ec6dec242d367495b307f.

--- a/security/manager/pki/resources/content/certManager.css
+++ b/security/manager/pki/resources/content/certManager.css
@@ -19,8 +19,7 @@
 
 /* This matches the <tree> height from dialog.css */
 richlistbox {
-  min-height: 15em;
-  contain: size;
+  height: 15em;
 }
 
 richlistbox,
