--- a/floorp/browser/components/preferences/design.inc.xhtml
+++ b/floorp/browser/components/preferences/design.inc.xhtml
@@ -57,7 +57,7 @@
     <html:h2 data-l10n-id="tabbar-style-preference" />
     <description class="indent tip-caption" data-l10n-id="tabbar-style-description" />
     <radiogroup preference="floorp.tabbar.style">
-      <radio value="0" data-l10n-id="horizontal-tabbar" class="needreboot" />
+      <radio value="0" data-l10n-id="horizontal-tabbar" />
 
       <radio value="1" data-l10n-id="multirow-tabbar" />
       <checkbox data-l10n-id="multirow-tabs-newtab" preference="floorp.browser.tabbar.multirow.newtab-inside.enabled"
@@ -69,9 +69,8 @@
         <html:input type="number" min="1" value="0" id="MultirowValue" class="multiRowTabs" />
       </hbox>
 
-      <radio value="2" data-l10n-id="vertical-tabbar" class="needreboot"/>
+      <radio value="2" data-l10n-id="vertical-tabbar" />
       <description class="indent tip-caption" data-l10n-id="native-tabbar-tip" />
-      <checkbox preference="floorp.browser.tabs.verticaltab.right" id="nativeVerticalTab" data-l10n-id="native-vertical-tab-show-right" />
       <checkbox preference="floorp.verticaltab.hover.enabled" id="hoverVerticalTab" data-l10n-id="hover-vertical-tab"
         class="verticalTabs" />
     </radiogroup>
