Application of new styles for tabs, vertical tabs, borders, bookmarks bar, navigation bar, new tabs and more.

--- a/floorp/browser/themes/designs/options/navbar-botttom.css
+++ b/floorp/browser/themes/designs/options/navbar-botttom.css
@@ -31,6 +31,7 @@
   display: none !important;
 }
 
+/** Fix for https://github.com/Floorp-Projects/Floorp/issues/889 **/
 #TabsToolbar {
   z-index: 0 !important;
 }
