--- a/floorp/browser/themes/designs/lepton/leptonChrome.css
+++ b/floorp/browser/themes/designs/lepton/leptonChrome.css
@@ -12025,6 +12025,9 @@
         padding-inline-start: var(--menu-background-padding-default) !important;
         margin-left: 0 !important;
       }
+      .menupopup-arrowscrollbox {
+        padding-inline: 0 !important; /* Original: padding: var(--panel-padding); --panel-padding-block: 4px; */
+      }
     }
     @media (-moz-os-version: windows-win7),
       (-moz-os-version: windows-win8),
@@ -12096,6 +12099,9 @@
           #context_openANewTab.tabmix-newtab-menu-icon {
             padding-inline-start: var(--menu-background-padding-default) !important;
             margin-left: 0 !important;
+          }
+          .menupopup-arrowscrollbox {
+            padding-inline: 0 !important; /* Original: padding: var(--panel-padding); --panel-padding-block: 4px; */
           }
         }
       }
@@ -13653,6 +13659,9 @@
       /*= menu_HelpPopup ===========================================================*/
       #menu_openHelp {
         --menuitem-image: url("chrome://global/skin/icons/help.svg");
+      }
+      #help_reportBrokenSite {
+        --menuitem-image: url("chrome://global/skin/icons/lightbulb.svg");
       }
       #feedbackPage {
         --menuitem-image: url("chrome://browser/skin/lepton/send.svg");
