--- a/floorp/browser/themes/designs/options/native-verticaltab-hover.css
+++ b/floorp/browser/themes/designs/options/native-verticaltab-hover.css
@@ -2,100 +2,107 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-   #sidebar {
-    max-width: none !important;
-    min-width: 0px !important;
-  }
-  
-  #sidebar-splitter {
-    display: none !important;
-  }
-  
-  #sidebar-header {
-    display: none !important;
-  }
-  
-  
-  /*shared*/
-  #sidebar-box {
-    position: relative !important;
-    clip-path: inset(0) !important;
-    z-index: 1 !important;
-    transition-delay: 0.2s !important;
-  }
-  
-  :root {
-    --default-vertitaltab-width: 42px;
-    --hoverd-verticaltab-width: 20em;
-  }
-
-  :root[uidensity=compact]{
-    --default-vertitaltab-width: 35px !important;
-  }
-
-  :root[uidensity=touch]{
-    --default-vertitaltab-width: 60px !important;
-  }
-    
-  
-  
-  /*close*/
-  #sidebar-box {
-    --hovering-verticaltab-width: calc( var(--default-vertitaltab-width) + 12px);
-    width: var(--default-vertitaltab-width) !important;
-    transition-delay: 0.2s !important;
-  }
-
-#sidebar-box:not(:hover) .tab-close-button{
-  display:none !important;
-  --paxmod-display-close-button:none !important;
+#TabsToolbar {
+  max-width: none !important;
+  min-width: 0px !important;
 }
-
-#sidebar-box:not(:hover) .tab-label-container{
+  
+#verticaltab-splitter {
   display: none !important;
 }
-#sidebar-box:not(:hover)  :is(.tab-icon-stack,.tab-icon-image){
-margin:auto !important;
+
+/*shared*/
+:root {
+  --default-verticaltab-width: 45px;
+  --hoverd-verticaltab-width: 20em;
 }
 
-#sidebar-box:not(:hover)  .tab-icon-stack{
-  padding-left: 0.5px;
+:root[uidensity=compact]{
+  --default-verticaltab-width: 35px !important;
+}
+
+:root[uidensity=touch]{
+  --default-verticaltab-width: 60px !important;
+}
+
+/*close*/
+#TabsToolbar {
+  width: var(--default-verticaltab-width) !important;
+  transition: all 200ms !important;
+  transition-delay: 0.2s !important;
+  z-index: 100 !important;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@media (-moz-platform: windows-win10) and (-moz-platform: macos) {
+  #TabsToolbar {
+    background-color: var(--lwt-accent-color-inactive, var(--lwt-accent-color)) !important;
+    background-image: var(--lwt-additional-images) !important;
   }
-
-#sidebar-box:not(:hover) .tab-content{
-  --inline-tab-padding:0px !important;
-  padding-inline: 0px !important;
 }
-#sidebar-box .tabbrowser-tab{
+
+@media (-moz-platform: linux) {
+  #TabsToolbar:-moz-lwtheme {
+    background-color: var(--lwt-accent-color) !important;
+    background-image: var(--lwt-additional-images) !important;
+  }
+}
+
+#TabsToolbar:not(:hover) #tabbrowser-tabs[closebuttons="activetab"] .tabbrowser-tab .tab-content[class] > .tab-close-button[class] {
+  display: none !important;
+  visibility: hidden !important;
+}
+
+#TabsToolbar-customization-target:not(:hover) > #tabbrowser-tabs > #tabbrowser-arrowscrollbox > .tabbrowser-tab > .tab-stack > .tab-content > .tab-label-container {
+  opacity: 0;
+  visibility: collapse;
+  transition: opacity 370ms,
+  visibility 370ms,
+  width 370ms var(--animation-easing-function) !important;
+}
+
+#TabsToolbar-customization-target:not(:hover) > .toolbarbutton-1 > .toolbarbutton-text {
+  opacity: 0;
+  visibility: collapse;
+  transition: all 370ms !important;
+}
+
+#TabsToolbar-customization-target:hover > .toolbarbutton-1 > .toolbarbutton-text {
+  transition-delay: 0.2s !important;
+}
+
+#sidebar-box .tabbrowser-tab {
   margin-right: 1px !important;
   margin-left: 1px !important;
 }
-  
-  /*open*/
-  #sidebar-box:hover {
-    --hovering-verticaltab-width: var(--hoverd-verticaltab-width) !important; 
-    transition: all 200ms !important;
-    transition-delay: 0.2s !important;
-  }
-  
-  
-  /*left*/
-  #sidebar-box:not([positionend="true"]):hover {
-    margin-right: calc((var(--hoverd-verticaltab-width) - var(--default-vertitaltab-width) - 12px) * -1) !important;
-  }
-  
-  /*right*/
-  #sidebar-box[positionend="true"]:hover {
-    margin-left: calc((var(--hoverd-verticaltab-width) - var(--default-vertitaltab-width) - 12px) * -1) !important;
-  }
-  
-  /* if tab doesn't have an icon, make sure it still has tab icon */
 
-  .tab-icon-image:not([src], [busy]) {
-    width: 16px !important;
-    height: 16px !important;
-    display: inherit !important;
-  }
+/*open*/
+#TabsToolbar:hover {
+  transition: all 200ms !important;
+  transition-delay: 0.2s !important;
+  z-index: 100 !important;
+  width: 250px !important;
+}
+
+/*left*/
+#TabsToolbar:not([positionend="true"]):hover {
+  margin-right: calc((var(--hoverd-verticaltab-width) - var(--default-verticaltab-width) + 10px) * -1) !important;
+}
+
+/*right*/
+#TabsToolbar[positionend="true"]:hover {
+  margin-left: calc((var(--hoverd-verticaltab-width) - var(--default-verticaltab-width) + 10px) * -1) !important;
+}
+  
+/* if tab doesn't have an icon, make sure it still has tab icon */
+
+.tab-icon-image:not([src], [busy]) {
+  width: 16px !important;
+  height: 16px !important;
+  display: inherit !important;
+}
 
 #tabbrowser-tabs[positionpinnedtabs] > #tabbrowser-arrowscrollbox > .tabbrowser-tab[pinned] {
   min-width: -moz-available !important;
@@ -111,12 +118,4 @@ margin:auto !important;
 
 :root[uidensity] .tabbrowser-tab[context][class], .tabbrowser-tab[context][class] {
   min-width: -moz-available !important;
-}
-
-.tab-label-container[pinned="true"]::after {
-  content: "Pinned";
-  font-size: 8.5px;
-  margin-top: -5px;
-  color: var(--panel-description-color);
-  font-weight: bold;
 }
