--- a/floorp/browser/components/welcome/welcome.css
+++ b/floorp/browser/components/welcome/welcome.css
@@ -79,7 +79,7 @@ body {
     width: fit-content;
     border: 1px solid rgba(170, 170, 170, 0.6);
     border-radius: 10px;
-    min-width: 550px;
+    min-width: 750px;
     max-width: 550px;
     padding: 100px;
 }
@@ -130,16 +130,22 @@ body {
 }
 
 .second-option-icons {
-    height: 25px;
+    height: 60px;
+    margin-bottom: 3px;
 }
 
 #second-template-options-flex-box {
     display: flex;
+    justify-content: center;
+    align-items: center; 
 }
 
 .second-template-option {
     margin: 30px;
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .second-template-option-text {
@@ -147,7 +153,7 @@ body {
 }
 
 .second-template-option-description {
-    height: 130px;
+    margin-bottom: 20px;
 }
 
 #second-select-button {
