add feature WebApps

--- a/floorp/browser/base/content/browser-verticaltabs.css
+++ b/floorp/browser/base/content/browser-verticaltabs.css
@@ -1,290 +1,187 @@
-/*-- This Source Code Form is subject to the terms of the Mozilla Public
-   - License, v. 2.0. If a copy of the MPL was not distributed with this
-   - file, You can obtain one at http://mozilla.org/MPL/2.0/. */
+/*
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ */
 
-   :root {
-    --tab-separator-opacity: 0 !important;
-  }
+.toolbar-items {
+  height: 100%;
+}
 
-   .tabbrowser-tab {
-     display: block !important;
-     --tab-overflow-pinned-tabs-width: 0px !important;
-   }
+#TabsToolbar {
+  max-width: 350px;
+  min-width: 150px;
+  transition :min-width 150ms ease-out, max-width 150ms ease-out;
+  overflow: hidden;
+}
 
-   .tabbrowser-tab[hidden="true"] {
-    display: none !important;
-  }
+#TabsToolbar:-moz-lwtheme {
+  background-image: var(--lwt-additional-images);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: var(--lwt-accent-color-inactive, var(--lwt-accent-color));
+}
 
-   #toolbar-items-verticaltabs {
-     width: -moz-available !important;
-     min-width: -moz-available !important;
-     max-width: -moz-available !important;
-     height: 100% !important;
-   }
+.tabbrowser-tab {
+  max-width: unset;
+  width: 100%;
+  min-height: unset;
+  height: 40px !important;
+  max-height: 40px !important;
+  margin: 0 !important;
+  margin-inline-start: 0 !important;
+}
 
-   #toolbar-items-verticaltabs:-moz-lwtheme {
-     background-color: var(--lwt-accent-color);
-     background-image: var(--lwt-additional-images);
-     background-repeat: no-repeat, no-repeat, no-repeat;
-     background-position: left;
-     background-size: cover;
-   }
+.tab-background {
+  height: 35px
+}
 
-   #tabbrowser-tabs:-moz-lwtheme {
-    color: var(--lwt-text-color, var(--toolbar-color));
-    background-color: var(var(--toolbar-bgcolor), --tab-selected-bgcolor);
-    background-image: linear-gradient(
-      var(--lwt-selected-tab-background-color), 
-      var(--toolbar-bgcolor),
-      var(--lwt-selected-tab-background-color, transparent)),
-      linear-gradient(var(--toolbar-bgcolor), 
-      var(--toolbar-bgcolor)),
-      var(--lwt-header-image, none
-    );
-  }
+.tab-throbber,
+.tab-icon-pending,
+.tab-icon-image,
+.tab-sharing-icon-overlay,
+.tab-icon-overlay {
+  margin-inline-end: 16px !important;
+}
 
-  .tabbrowser-tab:-moz-lwtheme[selected="true"] {
-    color: var(var(--toolbar-color) --lwt-tab-text);
-  }
+#TabsToolbar-customization-target {
+  height: 100%;
+  max-height: 100%;
+  min-height: 100%;
+  flex-direction: column;
+}
 
-   #toolbar-items-verticaltabs {
-     order: 0 !important;
-     width: -moz-available;
-     display: block;
-     overflow-y: scroll;
-     overflow-x: hidden;
-     scrollbar-width: thin;
-     min-height: 0px;
-   }
-
-
-   /* Hide tabtoolber custom elem */
-
-   #main-window[tabsintitlebar="true"]:not([extradragspace="true"]) #TabsToolbar>.toolbar-items {
-     display: none !important;
-   }
-
-   #sidebar-box {
-     --floorp-verticaltab-maxwidth: 50em;
-     --floorp-verticaltab-minwidth: 3em;
-     max-width: var(--hovering-verticaltab-width, 50em) !important;
-     min-width: var(--hovering-verticaltab-width, 3em) !important;
-   }
-
-   #tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs]) > #tabbrowser-arrowscrollbox[flex] > .tabbrowser-tab[first-visible-unpinned-tab] {
-     margin-inline-start: 0 !important
-   }
-
-   #tabbrowser-tabs[overflow] .tabbrowser-tab[last-visible-tab]:not([pinned], [style*="max-width"])[fadein] {
-     margin-inline-end: 0 !important
-   }
-
-   #tabbrowser-tabs {
-     max-width: -moz-available !important;
-     min-width: -moz-available !important;
-     width: auto;
-   }
-
-   #TabsToolbar-customization-target {
-      min-height: 100% !important;
-   }
-
-   #TabsToolbar-customization-target>.toolbarbutton-1 {
-     display: none !important;
-   }
-
-   .tab-icon-image:not([pinned]) {
-     padding-inline-end: 1px;
-   }
-
-   .tabbrowser-tab:not([pinned]):not([fadein]) {
-     display: none !important;
-     max-width: 0 !important;
-     min-width: 0 !important;
-     width: 0 !important;
-     max-height: 0 !important;
-     min-height: 0 !important;
-     height: 0 !important;
-   }
-
-   .tabbrowser-tab.tabbrowser-tab:not([pinned]) {
-     width: -moz-available !important;
-     min-width: -moz-available !important;
-     max-width: -moz-available !important;
-     padding-inline-start: var(--floorp-customcss-vertical-tab-inline-start, 2px) !important;
-     padding-inline-end: 2px !important;
-   }
-
-   #tabbrowser-tabs[positionpinnedtabs]>#tabbrowser-arrowscrollbox>.tabbrowser-tab[pinned] {
-     position: unset !important;
-   }
-
-    :root:not([uidensity="touch"]) #tabbrowser-arrowscrollbox {
-     --scrollbtn-inner-padding: 0px;
-     --scrollbtn-outer-padding: 0px;
-   }
-
-
-   #tabbrowser-arrowscrollbox-periphery {
-     width: -moz-available;
-     margin-top: 0.5em;
-   }
-
-   #tabs-newtab-button {
-     display: flex !important;
-     width: -moz-available;
-   }
-
-   #tabs-newtab-button:hover {
-     background: var(--toolbarbutton-hover-background);
-   }
-
-   #tabs-newtab-button {
-     border-radius: 5px;
-   }
-
-   #tabs-newtab-button {
-     width: -moz-available;
-     position: unset;
-     appearance: inherit;
-     margin-left: 5px;
-     margin-right: 5px;
-   }
-
-   #alltabs-button, #new-tab-button {
-     display: none !important;
-   }
-
-   #tabs-newtab-button>.toolbarbutton-text {
-     display: none;
-   }
-
-   #tabs-newtab-button>.toolbarbutton-icon {
-     margin-left: auto !important;
-     margin-right: auto !important;
-     margin-inline-end: auto !important;
-   }
-
-   .tabbrowser-tab {
-     width: -moz-available !important;
-     min-width: -moz-available !important;
-     max-width: -moz-available !important;
-   }
-
-   .tabbrowser-tab[pinned] {
-     position: unset !important;
-     max-width: 3em !important;
-     width: 3em !important;
-     min-width: 3em !important;
-   }
-
-   .tab-label-container[pinned] {
-     display: none !important;
-   }
-
-   #tabbrowser-arrowscrollbox {
-     display: block;
-   }
-
-
-   /* disable Firefox's sidebar features */
-
-   #sidebar-header {
-     display: none !important;
-   }
-
-   #sidebar {
-     display: none !important;
-   }
-
-
-   tab>stack, .tabbrowser-tab {
-     height: unset !important;
-     width: -moz-available !important;
-     min-width: -moz-available !important;
-   }
-
-   .tabbrowser-tab[context]:not([pinned]) .tab-icon-stack, tab-label-container {
-     margin-left: 0 !important;
-   }
-
-    :root[tabsintitlebar] #titlebar .titlebar-buttonbox-container:not(#hack) {
-     display: block !important;
-     position: fixed !important;
-     height: unset !important;
-   }
-
-   .tab-stack::before, .tab-stack::after {
-     display: none !important;
-   }
-
-   .tabbrowser-tab[label="Midori View"], .tabbrowser-tab[label="Firefox View"] {
-     display: none !important;
-   }
-
-   #tabbrowser-arrowscrollbox-periphery > .closing-tabs-spacer {
-    display: none !important;
-   }
-
-   #tabbrowser-tabs[positionpinnedtabs] > #tabbrowser-arrowscrollbox > .tabbrowser-tab[pinned] {
-    position: inherit !important;
-    display: block !important;
-    margin-inline-start: 0 !important;
-  }
-
-  .tab-content[align] {
+#TabsToolbar-customization-target > .toolbarbutton-1  {
+  display: inherit !important;
+  appearance: inherit !important;
+  border-radius: 5px;
+  height: 25px;
+  margin: 5px;
   padding: 0 !important;
-  padding-left: 5px !important;
-  }
+  justify-content: flex-start;
+}
 
-  .tab-icon-stack[pinned="true"] {
-    margin-inline-end: 5.5px;
-  }
+#TabsToolbar-customization-target > .toolbarbutton-1:hover {
+  background: var(--toolbarbutton-hover-background);
+  color: inherit;
+}
 
-  .tab-label-container[pinned="true"][flex] {
-    display: inherit !important;
-  }
+#TabsToolbar-customization-target > .toolbarbutton-1:active {
+  background: var(--toolbarbutton-active-background);
+  color: inherit;
+}
 
-  :root[uidensity] .tabbrowser-tab[context][class], .tabbrowser-tab[context][class] {
-    min-width: -moz-available !important;
-  }
+/* Firefox View compatibity. Use "open" instead of open="true" */
+#TabsToolbar-customization-target > .toolbarbutton-1[open] {
+  background-color: var(--toolbarbutton-active-background);
+  color: inherit;
+}
 
-  .tab-label-container[pinned="true"]::after {
-    content: "Pinned";
-    font-size: 8.5px;
-    margin-top: -5px;
-    color: var(--panel-description-color);
-    font-weight: bold;
-  }
+#TabsToolbar-customization-target > .toolbarbutton-1 > .toolbarbutton-icon {
+  background: none !important;
+  background-color: unset !important;
+  box-shadow: none !important;
+}
 
-  #tabbrowser-tabs[is] {
-    padding: 0px !important;
-    --tab-overflow-pinned-tabs-width: 0px !important;
-    margin-inline-start: 0px !important;
-  }
+#TabsToolbar-customization-target > .toolbarbutton-1 > .toolbarbutton-badge-stack {
+  background: none !important;
+  background-color: unset !important;
+  box-shadow: none !important;
+  padding: inherit;
+}
 
-  .tabbrowser-tab[label] {
-    margin-inline-start: 0px !important;
-  }
+#TabsToolbar-customization-target > .toolbarbutton-1 > .toolbarbutton-text {
+  background: none !important;
+  background-color: unset !important;
+  display: inherit !important;
+  padding: 10px !important;
+}
 
-  /* Lepton Injection */
-  #tabbrowser-tabs[orient="vertical"] {
-    --tab-block-margin: 4px !important;
-  }
+.tab-label-container[pinned="true"]::after {
+  content: "Pinned";
+  font-size: 8.5px;
+  margin-top: -3px;
+  color: var(--panel-description-color);
+  font-weight: bold;
+}
 
-  #tabs-newtab-button[class]::before {
-    opacity: 0 !important;
-  }
+#TabsToolbar .toolbarbutton-1 > .toolbarbutton-text {
+  display: inherit;
+}
 
-  #tabs-newtab-button .toolbarbutton-icon[class] {
-    padding: 0px !important;
-  }
+#tabbrowser-arrowscrollbox::part(scrollbutton-up), #tabbrowser-arrowscrollbox::part(scrollbutton-down) {
+  display: none;
+}
 
-  .tab-close-button {
-    position: relative;
-    right: 10px;
-  }
-  
-  .tabbrowser-tab[first-visible-unpinned-tab="true"] .tab-close-button {
-    right: 11px;
-  }
+#TabsToolbar .toolbarbutton-icon {
+  padding: 8px !important;
+  height: 32px !important;
+  width: 32px !important;
+}
+
+#tabbrowser-tabs {
+  border-inline-start: none !important;
+  padding-inline-start: 0 !important;
+  border-bottom: solid var(--toolbarseparator-color) 0.1px;
+  padding-bottom: 0 !important;
+  margin: 5px !important;
+  margin-left: 2px !important;
+}
+
+#tabbrowser-arrowscrollbox-periphery {
+  display: none;
+}
+
+#tabbrowser-arrowscrollbox {
+  overflow-x: hidden !important;
+  overflow-y: auto !important;
+}
+
+#TabsToolbar > .titlebar-spacer[type="pre-tabs"], #TabsToolbar > .titlebar-spacer[type="post-tabs"] {
+  display: none !important;
+}
+
+#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs]) > #tabbrowser-arrowscrollbox[flex] > .tabbrowser-tab[first-visible-unpinned-tab] {
+  margin-inline-start: 0px !important;
+}
+
+.tabbrowser-tab[fadein]:not([pinned]):not([style*="max-width"])[is] {
+  max-width: -moz-available !important;
+}
+
+#tabbrowser-tabs[positionpinnedtabs] > #tabbrowser-arrowscrollbox > .tabbrowser-tab[pinned] {
+  position: inherit !important;
+  display: block !important;
+  margin-inline-start: 0 !important;
+}
+
+#TabsToolbar[multibar] .tabbrowser-tab {
+  max-width: -moz-available !important;
+  width: -moz-available !important;
+  min-width: -moz-available !important;
+}
+
+#tabbrowser-tabs[orient="vertical"] .tabbrowser-tab[context="tabContextMenu"] {
+  margin-block: 0px !important;
+}
+
+#verticaltab-splitter {
+  background: var(--toolbar-bgcolor);
+}
+
+
+#tabbrowser-tabs[closebuttons="activetab"] .tabbrowser-tab:not([visuallyselected]) .tab-close-button[class] {
+  display: inherit !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+
+:is(:root[inDOMFullscreen],
+:root[inFullscreen]:not([macOSNativeFullscreen]),
+*|*:root[chromehidden~="toolbar"])
+#TabsToolbar {
+  display: none;
+  transition: opacity 0.3s ease-in-out;
+}
+
