general modifications, appearance, functionalities,

--- a/floorp/browser/base/content/browser-bms-window.css
+++ b/floorp/browser/base/content/browser-bms-window.css
@@ -2,17 +2,24 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-#TabsToolbar {
-   display: none !important;
+
+/* Toolbars***************************************************************/
+
+toolbar {
+  display: none !important;
 }
 
-#PanelUI-menu-button {
-   display: none !important;
+#titlebar {
+  display: none !important;
 }
 
-#PersonalToolbar {
-   display: none !important;
+/* Toolbar buttons *****************************************************/
+
+#fxa-toolbar-menu-button {
+  display: none !important;
 }
+
+/* Back, Forward, Stop, Reload buttons should be shown *********************************/
 
 #back-button {
   display: inherit;
@@ -26,14 +33,16 @@
   display: inherit;
 }
 
-#titlebar {
+/* Context menu ********************************************************/
+
+#context-take-screenshot {
   display: none !important;
 }
 
-#statusBar {
+#context-viewsource {
   display: none !important;
 }
 
-#urlbar-container {
-    display: none !important;
+#context-sep-screenshots {
+  display: none !important;
 }
