--- a/floorp/browser/components/about/aboutcontributors/contributors.html
+++ b/floorp/browser/components/about/aboutcontributors/contributors.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Midori Browser Contributors</title>
+    <title>Floorp Browser Contributors</title>
     <meta charset="UTF-8" />
   </head>
 
   <body>
     <header>
-      <h1>Midori Browser Contributors</h1>
+      <h1>Floorp Browser Contributors</h1>
       <h3>
-        Midori is an open-source software & web browser. Midori is made for
-        everyone. Below is a list of the contributors to the Midori Project.
+        Floorp is an open-source software & web browser. Floorp is made for
+        everyone. Below is a list of the contributors to the Floorp Project.
       </h3>
     </header>
     <hr />
-    <h4>Midori Projects Developers:</h4>
+    <h4>Floorp Projects Developers:</h4>
     <div class="contributors">
       <ul>
         <li>すらーぷの妖精</li>
@@ -39,6 +39,7 @@
         <li>GrapeApple</li>
         <li>benzBrake</li>
         <li>xe1st</li>
+        <li>Inkatail</li>
       </ul>
       <h4>Other contributors:</h4>
       <ul>
