--- a/floorp/browser/components/about/aboutcontributors/contributors.html
+++ b/floorp/browser/components/about/aboutcontributors/contributors.html
@@ -1,55 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Floorp Browser Contributors</title>
+    <title>Midori Browser Contributors</title>
     <meta charset="UTF-8" />
   </head>
 
   <body>
     <header>
-      <h1>Floorp Browser Contributors</h1>
+      <h1>Midori Browser Contributors</h1>
       <h3>
-        Floorp is an open-source software & web browser. Floorp is made for
-        everyone. Below is a list of the contributors to the Floorp Project.
+        Midori is a light, fast and secure web browser that promotes user privacy and security.
+        Below is a list of the contributors to the Midori Browser.
       </h3>
     </header>
     <hr />
-    <h4>Floorp Projects Developers:</h4>
+    <h4>Midori Browser Contributors:</h4>
     <div class="contributors">
       <ul>
-        <li>すらーぷの妖精</li>
-        <li>お餅のkerohira</li>
-        <li>typeling1578</li>
-        <li>実つまめ</li>
-        <li>( ⁠ '-' ) かったぁ</li>
-        <li>ライ🍊⚓</li>
-        <li>tukimi 🐈</li>
-        <li>nexryai</li>
-        <li>しゃねこ🐈</li>
-        <li>中院ぴあの</li>
-        <li>kaonasi_biwa</li>
-        <li>itta611</li>
-        <li>regularenthropy</li>
-        <li>CentRa</li>
-        <li>jobbautista9</li>
-      </ul>
-      <h4>Localizers:</h4>
-      <ul>
-        <li>Sorakime</li>
-        <li>GrapeApple</li>
-        <li>benzBrake</li>
-        <li>xe1st</li>
-        <li>Inkatail</li>
-      </ul>
-      <h4>Other contributors:</h4>
-      <ul>
-        <li>さらだぼぉる</li>
-        <li>dvorak-lya</li>
-        <li>Kori-Syusetu</li>
-        <li>へエスドミニク　(Dominic Hayes)</li>
-        <li>Hibi_10000</li>
-        <li>menndouyukkuri</li>
-        <li>nyanrus</li>
+        <li>Cuates.net</li>
+        <li>El Mau</li>
+        <li>nilsonmorales</li>
+        <li>josejp2424</li>
+        <li>loC-OS</li>
+        <li>Nico🍊⚓</li>
+        <li>Nico Informatica</li>
+        <li>Elvis Roman</li>
+        <li>Alex Bejarano</li>
+        <li>Carl Strom</li>
+        <li>Nicholas Jonas</li>
+        <li>Dominic Logue</li>
+        <li>Jonathan Gaddi Giomini</li>
+        <li>Rogelio José Trujillo Moreno</li>
+        <li>Jorge Codina</li>
+        <li>Cartillo</li>
+        <li>Tony</li>
+        <li>Jacopo</li>
+        <li>Guerrero Negro</li>
+        <li>Franklin Ortiz</li>
       </ul>
     </div>
     <hr />
