restore link support

--- a/browser/components/preferences/main.inc.xhtml
+++ b/browser/components/preferences/main.inc.xhtml
@@ -739,7 +739,7 @@
   <hbox>
    <checkbox preference="toolkit.legacyUserProfileCustomizations.script" 
              id ="legacytoolkit" data-l10n-id="enable-userscript" class="needreboot"/>
-    <label class="learnMore" is="text-link" href="https://support.ablaze.one/articles/floorp/userChromeJSAndLegacyAddons"
+    <label class="learnMore" is="text-link" href="https://community.astian.org"
             data-l10n-id="do-not-track-learn-more"/>
   </hbox>
   <description class="indent tip-caption" data-l10n-id="about-userscript"/>
