--- a/floorp/browser/components/preferences/design.inc.xhtml
+++ b/floorp/browser/components/preferences/design.inc.xhtml
@@ -215,7 +215,7 @@
     #ifdef XP_WIN
     <hbox align="center">
       <checkbox preference="floorp.material.effect.enable" id="micaforeveryone" data-l10n-id="material-effect" />
-      <label class="learnMore" is="text-link" href="https://support.ablaze.one/articles/floorp/mica-for-everyone"
+      <label class="learnMore" is="text-link" href="https://community.astian.org"
         data-l10n-id="do-not-track-learn-more"></label>
     </hbox>
     #endif
