--- a/browser/components/preferences/preferences.xhtml
+++ b/browser/components/preferences/preferences.xhtml
@@ -260,7 +260,7 @@
           <image class="sidebar-footer-icon addons-icon"/>
           <label class="sidebar-footer-label" flex="1" data-l10n-id="addons-button-label"></label>
         </html:a>
-        <html:a id="AblazehelpButton" class="sidebar-footer-link" href="https://support.ablaze.one" target="_blank">
+        <html:a id="AblazehelpButton" class="sidebar-footer-link" href="https://community.astian.org" target="_blank">
           <image class="sidebar-footer-icon help-icon"/>
           <label class="sidebar-footer-label" flex="1" data-l10n-id="floorp-help-button-label"></label>
         </html:a>
