--- a/floorp/browser/components/about/aboutcontributors/contributors.html
+++ b/floorp/browser/components/about/aboutcontributors/contributors.html
@@ -46,8 +46,7 @@
         <i>
           This is the list of people, who have devoted significant time and
           delivered useful results. Contributors who wish to be added to the
-          list should submit a Pull Request or consider joining the Floorp
-          project!
+          list should submit a Pull Request or consider joining the Midori Browser!
         </i>
       </p>
     </footer>
