--- a/floorp/browser/base/content/browser-bms-window.css
+++ b/floorp/browser/base/content/browser-bms-window.css
@@ -2,38 +2,63 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+
+/* Toolbars***************************************************************/
+
 #TabsToolbar {
-   display: none !important;
+  display: none !important;
 }
 
 #PanelUI-menu-button {
-   display: none !important;
+  display: none !important;
 }
 
 #PersonalToolbar {
-   display: none !important;
-}
-
-#back-button {
-  display: inherit;
-}
-
-#forward-button {
-  display: inherit;
-}
-
-#stop-reload-button {
-  display: inherit;
+  display: none !important;
 }
 
 #titlebar {
-  display: none !important;
+ display: none !important;
 }
 
 #statusBar {
-  display: none !important;
+ display: none !important;
 }
 
 #urlbar-container {
-    display: none !important;
+   display: none !important;
+}
+
+/* Toolbar buttons *****************************************************/
+
+#fxa-toolbar-menu-button {
+ display: none !important;
+}
+
+/* Back, Forward, Stop, Reload buttons should be shown *********************************/
+
+#back-button {
+ display: inherit;
+}
+
+#forward-button {
+ display: inherit;
+}
+
+#stop-reload-button {
+ display: inherit;
+}
+
+/* Context menu ********************************************************/
+
+#context-take-screenshot {
+ display: none !important;
+}
+
+#context-viewsource {
+ display: none !important;
+}
+
+#context-sep-screenshots {
+ display: none !important;
 }
