change link support now we use telegram

--- a/browser/components/preferences/main.inc.xhtml
+++ b/browser/components/preferences/main.inc.xhtml
@@ -727,7 +727,7 @@
   <hbox>
    <checkbox preference="toolkit.legacyUserProfileCustomizations.script" 
              id ="legacytoolkit" data-l10n-id="enable-userscript" class="needreboot"/>
-    <label class="learnMore" is="text-link" href="https://community.astian.org"
+    <label class="learnMore" is="text-link" href="https://t.me/midoriweb"
             data-l10n-id="do-not-track-learn-more"/>
   </hbox>
   <description class="indent tip-caption" data-l10n-id="about-userscript"/>
