remove old style for Private Browser

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.html
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.html
@@ -16,14 +16,10 @@
     <link rel="icon" href="chrome://browser/skin/privatebrowsing/favicon.svg" />
     <link
       rel="stylesheet"
-      href="chrome://browser/content/aboutPrivateBrowsing.css"
-      media="all"
-    />
-    <link
-      rel="stylesheet"
       href="chrome://browser/skin/privatebrowsing/aboutPrivateBrowsing.css"
       media="all"
     />
+    <link rel="stylesheet" href="chrome://branding/content/aboutPrivateBrowsing.css" media="all"/>
     <link rel="localization" href="branding/brand.ftl" />
     <link rel="localization" href="toolkit/branding/brandings.ftl" />
     <link rel="localization" href="browser/aboutPrivateBrowsing.ftl" />
@@ -32,12 +28,6 @@
   </head>
 
   <body>
-    <p class="showNormal" data-l10n-id="about-private-browsing-not-private"></p>
-    <button
-      id="startPrivateBrowsing"
-      class="showNormal"
-      data-l10n-id="privatebrowsingpage-open-private-window-label"
-    ></button>
     <div id="search-banner" class="search-banner" hidden="true">
       <button
         id="search-banner-close-button"
