change link for help

--- a/browser/components/preferences/preferences.xhtml
+++ b/browser/components/preferences/preferences.xhtml
@@ -254,7 +254,7 @@
           <image class="sidebar-footer-icon addons-icon"/>
           <label class="sidebar-footer-label" flex="1" data-l10n-id="addons-button-label"></label>
         </html:a>
-        <html:a id="AblazehelpButton" class="sidebar-footer-link" href="https://t.me/midoriweb" target="_blank">
+        <html:a id="AblazehelpButton" class="sidebar-footer-link" href="https://help.astian.org" target="_blank">
           <image class="sidebar-footer-icon help-icon"/>
           <label class="sidebar-footer-label" flex="1" data-l10n-id="floorp-help-button-label"></label>
         </html:a>
